# docs/swagger.yaml
@@ -112,6 +112,8 @@ definitions:
         type: string
       open_date:
         type: string
+      organizer:
+        type: string
       user_id:
         type: string
     type: object
@@ -389,7 +391,8 @@ paths:
             additionalProperties: true
             type: object
       security:
-      - BearerAuth: []
+      - ApiKeyAuth: []
+        BearerAuth: []
       summary: Get all admins
       tags:
       - Admin
@@ -405,7 +408,8 @@ paths:
             additionalProperties: true
             type: object
       security:
-      - BearerAuth: []
+      - ApiKeyAuth: []
+        BearerAuth: []
       summary: Get all users
       tags:
       - Admin
@@ -1999,7 +2003,8 @@ paths:
             additionalProperties: true
             type: object
       security:
-      - BearerAuth: []
+      - ApiKeyAuth: []
+        BearerAuth: []
       summary: User logout
       tags:
       - Users
@@ -2057,6 +2062,29 @@ paths:
             additionalProperties: true
             type: object
       summary: Reset user password
+      tags:
+      - Users
+  /api/v1/users/show/{userId}:
+    get:
+      description: Get user details by ID (Self access only)
+      parameters:
+      - description: User ID
+        in: path
+        name: userId
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            additionalProperties: true
+            type: object
+      security:
+      - ApiKeyAuth: []
+        BearerAuth: []
+      summary: Get user by ID
       tags:
       - Users
   /api/v1/users/verify-email/{email}/{emailVerPass}:
